fix: Letter spacing

--- a/src/app/landing/header-v2/header-v2.component.scss
+++ b/src/app/landing/header-v2/header-v2.component.scss
@@ -68,6 +68,7 @@ nav {
         background: #e1e2ec;
         border-radius: 40px;
         padding: 8px 24px;
+        letter-spacing: initial;
 
         transition: background 100ms linear, outline 50ms linear;
         &:hover {
